# uncycle

./: .gitignore  Cargo.toml  README.md  default.nix  dependencies.nix  flake.nix  shell.nix  tui.nix
core/: Cargo.toml
core/src/: core.rs  lib.rs  looper.rs  midi.rs
core/src/devices/: mod.rs  tr8.rs
tui/: Cargo.toml
tui/src/: keybindings.rs  main.rs  midi.rs  state.rs
tui/src/app/: app.rs  cli.rs  connection.rs  keybindings.rs  log.rs  menu.rs  mod.rs  widgets.rs
tui/src/app/menu/: help.rs  mod.rs  popup.rs  selection.rs  setting.rs
tui/src/app/tabs/: device.rs  help.rs  main.rs  midi.rs  mod.rs  settings.rs
tui/src/device/: mod.rs  tr8.rs
