[package]
name = "uncycle-core"
version = "0.1.0"
edition = "2021"
description = "The MIDI core"
authors = ["backtail <mail@maxgenson.de>"]
readme = "../README.md"
repository = "https://github.com/backtail/uncycle"

[dependencies]
heapless = "0.9.2"

# I want to get rid of those eventually and become `no_std`
anyhow = "1.0"
midir = "0.10"

[features]
default = ["std"]
std = []
