[package]
name = "uncycle-core"
version = "0.3.0"
edition = "2021"
description = "The MIDI core"
authors = ["backtail <mail@maxgenson.de>"]
readme = "../README.md"
repository = "https://github.com/backtail/uncycle"

[dependencies]
heapless = "0.9.2"
enum_dispatch = "0.3.13"

[features]
default = []
std = []
