[package]
name = "uncycle-tui"
version = "0.2.0"
edition = "2021"
description = "A real-time MIDI tool that extends existing hardware synth capabilities."
authors = ["backtail <mail@maxgenson.de>"]
readme = "../README.md"
repository = "https://github.com/backtail/uncycle"

[dependencies]
uncycle-core = { path = "../core/" }

# TUI deps
crossterm = "0.29"
ratatui = "0.29"
tui-big-text = "0.7.3"

# MIDI deps
midir = "0.10"
anyhow = "1.0"

# uncycle deps
heapless = "0.9.2"
